src/diagrams/mermaid/timeline/parser.js
// AUTO-GENERATED from grammar.peggy — do not edit.
// Regenerate: node scripts/build-grammars.mjs

// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/



  function slugify(text) {
    return text
      .toLowerCase()
      .replace(/[^a-z0-9]+/g, '-')
      .replace(/^-|-$/g, '') || '';
  }

  const tracks     = new Map();
  const activities = [];
  const milestones = [];
  const sections   = [];
  const overlays   = [];
  let actCounter  = 0;
  let msCounter   = 0;
  let secCounter  = 0;
  let currentSec  = null;

  function ensureTrack(id) {
    if (!id) id = 'default';
    if (!tracks.has(id)) tracks.set(id, { id, label: id.charAt(0).toUpperCase() + id.slice(1) });
    return id;
  }

  function addActivity(start, end, label, status, trackId, description) {
    actCounter++;
    activities.push({
      id: slugify(label) || `activity-${actCounter}`,
      label, track: ensureTrack(trackId),
      start, end: end || undefined,
      status: status || 'default',
      ...(description ? { description } : {}),
    });
  }

  function addMilestone(date, label, trackId, description) {
    msCounter++;
    milestones.push({
      id: slugify(label) || `milestone-${msCounter}`,
      label, date,
      track: trackId ? ensureTrack(trackId) : undefined,
      ...(description ? { description } : {}),
    });
  }

  function openSection(label) {
    secCounter++;
    currentSec = { id: slugify(label) || `section-${secCounter}`, label, start: null, end: null };
  }

  function updateSectionDate(date) {
    if (currentSec) {
      if (!currentSec.start) currentSec.start = date;
      currentSec.end = date;
    }
  }

  function closeSection() {
    if (currentSec && currentSec.start) {
      sections.push(currentSec);
    }
    currentSec = null;
  }

  function reset() {
    tracks.clear();
    activities.length = 0;
    milestones.length = 0;
    sections.length   = 0;
    overlays.length   = 0;
    actCounter  = 0;
    msCounter   = 0;
    secCounter  = 0;
    currentSec  = null;
  }

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Document: peg$parseDocument };
  var peg$startRuleFunction = peg$parseDocument;

  var peg$c0 = "timeline";
  var peg$c1 = "title";
  var peg$c2 = "subtitle";
  var peg$c3 = "theme";
  var peg$c4 = "layout";
  var peg$c5 = "axisUnit";
  var peg$c6 = "---";
  var peg$c7 = "section";
  var peg$c8 = ":";
  var peg$c9 = "--";
  var peg$c10 = "@";
  var peg$c11 = "|";
  var peg$c12 = "milestone";
  var peg$c13 = "active";
  var peg$c14 = "done";
  var peg$c15 = "blocked";
  var peg$c16 = "default";
  var peg$c17 = "note";
  var peg$c18 = "\"";
  var peg$c19 = "at";
  var peg$c20 = "offset";
  var peg$c21 = ",";
  var peg$c22 = "-";
  var peg$c23 = "legend";
  var peg$c24 = "end";
  var peg$c25 = "bottom-right";
  var peg$c26 = "bottom-left";
  var peg$c27 = "top-right";
  var peg$c28 = "top-left";
  var peg$c29 = "%%";
  var peg$c30 = "\r\n";

  var peg$r0 = /^[^\n]/;
  var peg$r1 = /^[^:\n@|]/;
  var peg$r2 = /^[a-zA-Z0-9_\-\/.]/;
  var peg$r3 = /^[a-zA-Z_]/;
  var peg$r4 = /^[a-zA-Z0-9_\-]/;
  var peg$r5 = /^[^"]/;
  var peg$r6 = /^[0-9]/;
  var peg$r7 = /^[a-zA-Z0-9_]/;
  var peg$r8 = /^[^:\n]/;
  var peg$r9 = /^[ \t]/;
  var peg$r10 = /^[\n\r]/;

  var peg$e0 = peg$literalExpectation("timeline", false);
  var peg$e1 = peg$literalExpectation("title", false);
  var peg$e2 = peg$classExpectation(["\n"], true, false);
  var peg$e3 = peg$literalExpectation("subtitle", false);
  var peg$e4 = peg$literalExpectation("theme", false);
  var peg$e5 = peg$literalExpectation("layout", false);
  var peg$e6 = peg$literalExpectation("axisUnit", false);
  var peg$e7 = peg$literalExpectation("---", false);
  var peg$e8 = peg$literalExpectation("section", false);
  var peg$e9 = peg$literalExpectation(":", false);
  var peg$e10 = peg$literalExpectation("--", false);
  var peg$e11 = peg$literalExpectation("@", false);
  var peg$e12 = peg$literalExpectation("|", false);
  var peg$e13 = peg$classExpectation([":", "\n", "@", "|"], true, false);
  var peg$e14 = peg$literalExpectation("milestone", false);
  var peg$e15 = peg$literalExpectation("active", false);
  var peg$e16 = peg$literalExpectation("done", false);
  var peg$e17 = peg$literalExpectation("blocked", false);
  var peg$e18 = peg$literalExpectation("default", false);
  var peg$e19 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-", "/", "."], false, false);
  var peg$e20 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e21 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false);
  var peg$e22 = peg$literalExpectation("note", false);
  var peg$e23 = peg$literalExpectation("\"", false);
  var peg$e24 = peg$classExpectation(["\""], true, false);
  var peg$e25 = peg$literalExpectation("at", false);
  var peg$e26 = peg$literalExpectation("offset", false);
  var peg$e27 = peg$literalExpectation(",", false);
  var peg$e28 = peg$literalExpectation("-", false);
  var peg$e29 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e30 = peg$literalExpectation("legend", false);
  var peg$e31 = peg$literalExpectation("end", false);
  var peg$e32 = peg$literalExpectation("bottom-right", false);
  var peg$e33 = peg$literalExpectation("bottom-left", false);
  var peg$e34 = peg$literalExpectation("top-right", false);
  var peg$e35 = peg$literalExpectation("top-left", false);
  var peg$e36 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e37 = peg$classExpectation([":", "\n"], true, false);
  var peg$e38 = peg$literalExpectation("%%", false);
  var peg$e39 = peg$anyExpectation();
  var peg$e40 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e41 = peg$literalExpectation("\r\n", false);
  var peg$e42 = peg$classExpectation(["\n", "\r"], false, false);

  var peg$f0 = function(fm, header, directives, body) {
      closeSection();
      const titleDir = directives.find(d => d && d.key === 'title');
      const subtitleDir = directives.find(d => d && d.key === 'subtitle');
      const themeDir = directives.find(d => d && d.key === 'theme');
      const layoutDir = directives.find(d => d && d.key === 'layout');
      return {
        version:  '1.0',
        metadata: {
          ...(fm || {}),
          ...(titleDir ? { title: titleDir.value } : {}),
          ...(subtitleDir ? { subtitle: subtitleDir.value } : {}),
          ...(themeDir ? { theme: themeDir.value } : {}),
        },
        layout:   layoutDir ? layoutDir.value : 'horizontal',
        tracks:   tracks.size > 0 ? [...tracks.values()] : [{ id: 'default', label: 'Default' }],
        activities, milestones,
        sections: sections.length > 0 ? sections : undefined,
        overlays,
      };
    };
  var peg$f1 = function() { return 'timeline'; };
  var peg$f2 = function(value) { return { key: 'title', value: value.trim() }; };
  var peg$f3 = function(value) { return { key: 'subtitle', value: value.trim() }; };
  var peg$f4 = function(value) { return { key: 'theme', value: value.trim() }; };
  var peg$f5 = function() { return ext; };
  var peg$f6 = function(key, value) { return { key, value: value.trim() }; };
  var peg$f7 = function() { return ext; };
  var peg$f8 = function(line) { return line; };
  var peg$f9 = function(lines) {
      const meta = {};
      for (const line of lines) {
        const m = line.match(/^\s*(\w+)\s*:\s*(.+?)\s*$/);
        if (m) meta[m[1]] = m[2];
      }
      return meta;
    };
  var peg$f10 = function(items) { return items.filter(Boolean); };
  var peg$f11 = function(label) {
      closeSection();
      openSection(label.trim());
      return null;
    };
  var peg$f12 = function(entry) { return entry; };
  var peg$f13 = function(date, label) {
      addActivity(date, null, label, 'default', null);
      updateSectionDate(date);
      return { type: 'activity', label };
    };
  var peg$f14 = function(text) { return text.trim(); };
  var peg$f15 = function() { return ext; };
  var peg$f16 = function(entry) { return entry; };
  var peg$f17 = function(start, end, label, s) { return s; };
  var peg$f18 = function(start, end, label, status, id) { return id; };
  var peg$f19 = function(start, end, label, status, track, d) { return d; };
  var peg$f20 = function(start, end, label, status, track, desc) {
      addActivity(start, end, label, status, track, desc);
      updateSectionDate(start);
      updateSectionDate(end);
      return { type: 'activity', label };
    };
  var peg$f21 = function(date, label, kind, id) { return id; };
  var peg$f22 = function(date, label, kind, track, d) { return d; };
  var peg$f23 = function(date, label, kind, track, desc) {
      if (kind === 'milestone') addMilestone(date, label, track, desc);
      else addActivity(date, null, label, kind, track, desc);
      updateSectionDate(date);
      return { type: kind === 'milestone' ? 'milestone' : 'activity', label };
    };
  var peg$f24 = function(text) { return text.trim(); };
  var peg$f25 = function(text) { return text.trim(); };
  var peg$f26 = function(text, target, offset) {
      const note = { type: 'note', text, target, offset: offset || undefined };
      overlays.push(note);
      return note;
    };
  var peg$f27 = function(dx, dy) { return { dx, dy }; };
  var peg$f28 = function(sign, digits) { return parseInt((sign || '') + digits, 10); };
  var peg$f29 = function(corner, t) { return t; };
  var peg$f30 = function(corner, title, entries) {
      const legend = { type: 'legend', corner, title: title || undefined, entries };
      overlays.push(legend);
      return legend;
    };
  var peg$f31 = function(key, value) { return { key: key.trim(), value: value.trim() }; };
  var peg$f32 = function() { return null; };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseExtFrontmatter();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parse_();
    s3 = peg$parseHeader();
    if (s3 !== peg$FAILED) {
      s4 = peg$parse_();
      s5 = [];
      s6 = peg$parseDirective();
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$parseDirective();
      }
      s6 = peg$parse_();
      s7 = peg$parseBody();
      s8 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s1, s3, s5, s7);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseHeader() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNL();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDirective() {
    var s0;

    s0 = peg$parseExtDirective();
    if (s0 === peg$FAILED) {
      s0 = peg$parseMermaidDirective();
    }

    return s0;
  }

  function peg$parseMermaidDirective() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 5) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse__();
      if (s3 !== peg$FAILED) {
        s4 = peg$currPos;
        s5 = [];
        s6 = input.charAt(peg$currPos);
        if (peg$r0.test(s6)) {
          peg$currPos++;
        } else {
          s6 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s6 !== peg$FAILED) {
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = input.charAt(peg$currPos);
            if (peg$r0.test(s6)) {
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
          }
        } else {
          s5 = peg$FAILED;
        }
        if (s5 !== peg$FAILED) {
          s4 = input.substring(s4, peg$currPos);
        } else {
          s4 = s5;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseLineEnd();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f2(s4);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (input.substr(peg$currPos, 8) === peg$c2) {
        s2 = peg$c2;
        peg$currPos += 8;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          s5 = [];
          s6 = input.charAt(peg$currPos);
          if (peg$r0.test(s6)) {
            peg$currPos++;
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
          if (s6 !== peg$FAILED) {
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = input.charAt(peg$currPos);
              if (peg$r0.test(s6)) {
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e2); }
              }
            }
          } else {
            s5 = peg$FAILED;
          }
          if (s5 !== peg$FAILED) {
            s4 = input.substring(s4, peg$currPos);
          } else {
            s4 = s5;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            s6 = peg$parseLineEnd();
            if (s6 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f3(s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parse_();
        if (input.substr(peg$currPos, 5) === peg$c3) {
          s2 = peg$c3;
          peg$currPos += 5;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            s5 = [];
            s6 = input.charAt(peg$currPos);
            if (peg$r0.test(s6)) {
              peg$currPos++;
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s6 !== peg$FAILED) {
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = input.charAt(peg$currPos);
                if (peg$r0.test(s6)) {
                  peg$currPos++;
                } else {
                  s6 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e2); }
                }
              }
            } else {
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              s4 = input.substring(s4, peg$currPos);
            } else {
              s4 = s5;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              s6 = peg$parseLineEnd();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f4(s4);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }
    }

    return s0;
  }
